--- a/trung_thien_technology/public/prototype/Footer.html
+++ b/trung_thien_technology/public/prototype/Footer.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../src/Boostrap.css">
-    <link rel="stylesheet" href="../../src/Core.css">
-    <link rel="stylesheet" href="../../src/Footer.css">
+    <link rel="stylesheet" href="../../src/css/SP-One.css">l
 </head>
 <body>
 <footer class="footer">
@@ -23,7 +21,7 @@
 
 
                     <div class="item">
-                        <p class="name" data-toggle="collapse" href="#showroom0" aria-expanded="true" aria-controls="showroom0">SHOWROOM ĐÀ NẴNG</p>
+                        <p class="name" data-toggle="collapse"  aria-expanded="true" aria-controls="showroom0">SHOWROOM ĐÀ NẴNG</p>
                         <div class="sr-content collapse show" id="showroom0">
 
                             <p class="address">Địa chỉ: 280, Q. Sơn Trà, TP Đà Nẵng</p>
@@ -36,7 +34,7 @@
 
 
                     <div class="item">
-                        <p class="name" data-toggle="collapse" href="#showroom1" aria-expanded="false" aria-controls="showroom1">TTBH CẦN THƠ</p>
+                        <p class="name" data-toggle="collapse"  aria-expanded="false" aria-controls="showroom1">TTBH CẦN THƠ</p>
                         <div class="sr-content collapse " id="showroom1">
 
                             <p class="address">Địa chỉ: 30 Nguyễn Văn Linh, P. Hưng Lợi, Q. Ninh Kiều, TP Cần Thơ</p>
@@ -48,7 +46,7 @@
 
 
                     <div class="item">
-                        <p class="name" data-toggle="collapse" href="#showroom2" aria-expanded="false" aria-controls="showroom2">TTBH - ĐÀ LẠT</p>
+                        <p class="name" data-toggle="collapse"  aria-expanded="false" aria-controls="showroom2">TTBH - ĐÀ LẠT</p>
                         <div class="sr-content collapse " id="showroom2">
 
                             <p class="address">Địa chỉ: 47C - 47D Phù Đổng Thiên Vương, P.8, Đà Lạt, Lâm Đồng</p>
@@ -60,7 +58,7 @@
 
 
                     <div class="item">
-                        <p class="name" data-toggle="collapse" href="#showroom3" aria-expanded="false" aria-controls="showroom3">TTBH - NHA TRANG</p>
+                        <p class="name" data-toggle="collapse"  aria-expanded="false" aria-controls="showroom3">TTBH - NHA TRANG</p>
                         <div class="sr-content collapse " id="showroom3">
 
                             <p class="address">Địa chỉ: 51 Đường Âu Cơ, P. Phước Tân, Nha Trang, Khánh Hòa</p>
@@ -72,7 +70,7 @@
 
 
                     <div class="item">
-                        <p class="name" data-toggle="collapse" href="#showroom4" aria-expanded="false" aria-controls="showroom4">TTBH - BÌNH DƯƠNG</p>
+                        <p class="name" data-toggle="collapse" aria-expanded="false" aria-controls="showroom4">TTBH - BÌNH DƯƠNG</p>
                         <div class="sr-content collapse " id="showroom4">
 
                             <p class="address">Địa chỉ: 97K Tân Lập, P. Đông Hòa, TP. Dĩ An, Bình Dương</p>
@@ -94,12 +92,12 @@
 
 
                     <a href="https://www.youtube.com/c/SPONEoffical/" class="item youtube">
-                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-youtube"/>
                     </a>
 
 
                     <a href="" class="item instagram">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-instagram"/>
                     </a>
 
 
