--- a/trung_thien_technology/public/prototype/Header.html
+++ b/trung_thien_technology/public/prototype/Header.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../../src/Boostrap.css">
-    <link rel="stylesheet" href="../../src/Core.css">
+    <link rel="stylesheet" href="../../src/css/Mega.css">
 </head>
 <body>
 <header class="main-header">
@@ -15,23 +15,6 @@
             <div class="row-header">
                 <div class="coll-header main-header--left header-action">
                     <div class="header-action-item main-header--cate">
-                        <div class="header-action_text">
-                            <a class="header-action__link" href="#" id="site-menu-handle" aria-label="Danh mục"
-                               title="Danh mục">
-								<span class="box-icon">
-									<svg width="18" height="14" viewBox="0 0 18 14" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-										<rect x="-0.00012207" y="0.000190735" width="18" height="2" rx="1"
-                                              fill="white"></rect>
-										<rect x="-0.00012207" y="5.99999" width="18" height="2" rx="1"
-                                              fill="white"></rect>
-										<rect x="-0.00012207" y="12.0001" width="18" height="2" rx="1"
-                                              fill="white"></rect>
-									</svg>
-								</span>
-                                <span class="box-text"><span class="txtnw">Danh mục</span></span>
-                            </a>
-                        </div>
                         <div class="header-action_boxfull menu-desktop" id="menu-desktop-ajax">
                             <div class="sidebar-menu" id="sidebar-menu-ajax">
                                 <nav class="megamenu-nav">
@@ -3443,7 +3426,7 @@
                                                         <a class="sub-megamenu-item-filter"
                                                            href="/blogs/cong-nghe/danh-gia-game-wo-long-fallen-dynasty">Trải
                                                             nghiệm game Wo Long: Fallen Dynasty - Elder Ring</a>
-                                                            nghiệm game Wo Long: Fallen Dynasty - Elder Ring</a>
+                                                        nghiệm game Wo Long: Fallen Dynasty - Elder Ring</a>
 
                                                         <a class="sub-megamenu-item-filter"
                                                            href="/blogs/cong-nghe/google-cong-bo-cac-tinh-nang-moi-cho-android-va-wear-os-tai-mwc">Tính
