--- a/trung_thien_technology/public/prototype/Footer.html
+++ b/trung_thien_technology/public/prototype/Footer.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../src/css/SP-One.css">l
+    <link rel="stylesheet" href="../../src/css/SPOne.css">
+
 </head>
 <body>
 <footer class="footer">
@@ -66,9 +67,6 @@
                             <div class="pb-2"></div>
                         </div>
                     </div>
-
-
-
                     <div class="item">
                         <p class="name" data-toggle="collapse" aria-expanded="false" aria-controls="showroom4">TTBH - BÌNH DƯƠNG</p>
                         <div class="sr-content collapse " id="showroom4">
