--- a/trung_thien_technology/public/prototype/ProductDetail.html
+++ b/trung_thien_technology/public/prototype/ProductDetail.html
@@ -25,7 +25,8 @@
     <meta name='robots' content='max-image-preview:large'/>
 
     <title>Router Wifi ASUS RT-AX53U ( Windows 11 supported ) - SP-ONE</title>
-    <style id="rocket-critical-css"> .fal, .far {
+    <style id="rocket-critical-css">
+        .fal, .far {
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
         display: inline-block;
@@ -2531,7 +2532,7 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="../../src/css/SP-One.css">
+    <link rel="stylesheet" href="../../src/css/SPOne.css">
 </head>
 
 <body class="product-template-default single single-product postid-66588 wp-custom-logo theme-oneshop2021 woocommerce woocommerce-page woocommerce-no-js router-wifi-asus-rt-ax53-toc-do-ax1800 woocommerce-zzzz elementor-default elementor-kit-47093">
