--- a/trung_thien_technology/public/prototype/ProductDetail.html
+++ b/trung_thien_technology/public/prototype/ProductDetail.html
@@ -3103,7 +3103,7 @@
 
 
                 </div><!-- oneshop-quick-links -->
-                <!-- Product cat menu -->
+                <!-- PC cat menu -->
                 <div class="oneshop-dmsp-on-modal">
                     <div class="heading">Danh mục sản phẩm</div>
                     <ul class="oneshop-dmsp-icon">
@@ -7897,7 +7897,7 @@
     "@context": "https://schema.org",
     "@graph": [
         {
-            "@type": "Product",
+            "@type": "PC",
             "@id": "https://sp-one.vn/product/router-wifi-asus-rt-ax53-toc-do-ax1800/#product",
             "name": "Router wifi ASUS RT-AX53U T\u1ed1c \u0111\u1ed9 AX1800",
             "url": "https://sp-one.vn/product/router-wifi-asus-rt-ax53-toc-do-ax1800/",
