--- a/trung_thien_technology/public/index.html
+++ b/trung_thien_technology/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script src="https://www.paypal.com/sdk/js?client-id=AeGmNV-jY96_AsKjkdAKuCT98OjcTM6Orz63LcXInt9HsweXV5YgYKB-Qoc9TbNA0zIVlC7Xns3kx2vz&curency=USD"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,6 +30,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
